--- a/ansible/roles/control/base/tasks/main.yml
+++ b/ansible/roles/control/base/tasks/main.yml
@@ -13,6 +13,7 @@
       - pxelinux
       - p7zip-full
       - grub-efi-amd64-bin
+      - ssh
     state: present
 
 - name: Create TFTP and HTTP directories
