--- a/ansible/roles/hardware_specific/amd_vllm_build/tasks/main.yml
+++ b/ansible/roles/hardware_specific/amd_vllm_build/tasks/main.yml
@@ -49,8 +49,8 @@
     repo: https://github.com/triton-lang/triton.git
     dest: /usr/local/src/triton # Or any other temporary path
     version: e5be006
-    clone: yes
-    update: no # Ensures it stays at the specified version
+    clone: true
+    update: false # Ensures it stays at the specified version
 
 # using ansible native commands to build Triton isnt using venv properly, so use bash script
 - name: Create Triton build script on remote host
@@ -77,7 +77,7 @@
       - scipy
       - "huggingface-hub[cli,hf_transfer]"
       - setuptools_scm
-    state: latest
+    state: present
     virtualenv: "/opt/venvs/onedotzero"
 
 - name: Install numpy with a version constraint
