--- a/ansible/roles/control/chroot_connection_cleanup/tasks/main.yml
+++ b/ansible/roles/control/chroot_connection_cleanup/tasks/main.yml
@@ -3,23 +3,28 @@
   ansible.posix.mount:
     path: /srv/nfs/ubuntu_golden/proc
     state: unmounted
+  changed_when: false
 
 - name: Unmount chroot /dev/pts
   ansible.posix.mount:
     path: /srv/nfs/ubuntu_golden/dev/pts
     state: unmounted
+  changed_when: false
 
 - name: Unmount chroot /dev
   ansible.posix.mount:
     path: /srv/nfs/ubuntu_golden/dev
     state: unmounted
+  changed_when: false
 
 - name: Unmount chroot /sys/fs/cgroup
   ansible.posix.mount:
     path: /srv/nfs/ubuntu_golden/sys/fs/cgroup
     state: unmounted
+  changed_when: false
 
 - name: Unmount chroot /sys
   ansible.posix.mount:
     path: /srv/nfs/ubuntu_golden/sys
     state: unmounted
+  changed_when: false
