--- a/ansible/roles/control/base/molecule/default/molecule.yml
+++ b/ansible/roles/control/base/molecule/default/molecule.yml
@@ -15,6 +15,7 @@ platforms:
 provisioner:
   name: ansible
   playbooks:
+    prepare: ../../../../../tests/molecule/shared/prepare.yml
     converge: ${MOLECULE_PLAYBOOK:-converge.yml}
   env:
     ANSIBLE_ROLES_PATH: ../../../../
