--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,8 @@ PyYAML
 jinja2
 ansible
 ansible-lint
-molecule
+molecule<6
 molecule-plugins[docker]
+molecule-plugins[vagrant]
 yamllint
-molecule-vagrant
 requests==2.31.0
