--- a/ansible/compute_configure.yml
+++ b/ansible/compute_configure.yml
@@ -4,6 +4,7 @@
   become: true
   gather_facts: true
   vars_files:
+    - vars/main.yml
     - "hardware_vars/{{ hardware_version }}.yml"
 
   pre_tasks:
