--- a/ansible/roles/hardware_specific/amd_llama_cpp_rpc_server/tasks/main.yml
+++ b/ansible/roles/hardware_specific/amd_llama_cpp_rpc_server/tasks/main.yml
@@ -1,5 +1,5 @@
 ---
-- name: install build deps
+- name: Install build deps
   ansible.builtin.apt:
     name:
       - cmake
@@ -62,5 +62,5 @@
   ansible.builtin.systemd:
     name: llama-rpc-server
     state: started
-    enabled: yes
-    daemon_reload: yes
+    enabled: true
+    daemon_reload: true
