--- a/ansible/tests/build_image/molecule/default/converge.yml
+++ b/ansible/tests/build_image/molecule/default/converge.yml
@@ -12,7 +12,7 @@
       changed_when: false
 
     - name: Debug versions
-      debug:
+      ansible.builtin.debug:
         msg: |
           Ansible Version: {{ ansible_version.full }}
           Python Version: {{ ansible_python.version.major }}.{{ ansible_python.version.minor }}.{{ ansible_python.version.micro }}
