--- a/ansible/roles/hardware_specific/ray_worker/tasks/main.yml
+++ b/ansible/roles/hardware_specific/ray_worker/tasks/main.yml
@@ -1,4 +1,20 @@
 ---
+- name: Create /opt/scripts
+  ansible.builtin.file:
+    path: /opt/scripts
+    state: directory
+    owner: root
+    group: root
+    mode: "0755"
+
+- name: Create ray startup script
+  ansible.builtin.template:
+    src: start_ray.sh.j2
+    dest: /opt/scripts/start_ray.sh
+    owner: root
+    group: root
+    mode: "0755"
+
 - name: Create systemd service file for Ray Worker node
   ansible.builtin.template:
     src: ray.service.j2
