[vllm] control node cpu build and Ray services

--- a/ansible/build_image.yml
+++ b/ansible/build_image.yml
@@ -146,9 +146,9 @@
     roles_to_include:
       - common/docker
       - common/devtools
+      - common/vllm_source
       - compute/networkd_wol
       - compute/venv
-      - compute/vllm_source
   vars_files:
     - "vars/main.yml"
     - "hardware_vars/{{ hardware_version }}.yml"
