--- a/ansible/roles/common/vllm_source/tasks/main.yml
+++ b/ansible/roles/common/vllm_source/tasks/main.yml
@@ -2,7 +2,7 @@
 - name: Clone vLLM repository to a specific version
   ansible.builtin.git:
     repo: "https://github.com/evil0sheep/vllm.git"
-    dest: /usr/local/src/vllm
+    dest: "{{ vllm_source_path }}"
     version: chroot_build_fixes
     force: true
     update: false # Ensures we stay at the specified commit
