--- a/ansible/control_configure.yml
+++ b/ansible/control_configure.yml
@@ -92,19 +92,21 @@
         name: dnsmasq
         state: restarted
 
-# - name: Build and install LLM runtimes
-#   hosts: "{{ target_host | default('localhost') }}"
-#   become: true
-#   vars_files:
-#     - "vars/main.yml"
-#     - "hardware_vars/{{ hardware_version }}.yml"
-#   roles:
-#     - control/llama_cpp_rpc_client
+- name: Build and install LLM runtimes
+  hosts: "{{ target_host | default('localhost') }}"
+  become: true
+  vars_files:
+    - "vars/main.yml"
+    - "hardware_vars/{{ hardware_version }}.yml"
+  roles:
+    # - control/llama_cpp_rpc_client
+    - common/vllm_source
 
 - name: Apply hardware-specific configurations
   hosts: "{{ target_host | default('localhost') }}"
   become: true
   vars_files:
+    - "vars/main.yml"
     - "hardware_vars/{{ hardware_version }}.yml"
   tasks:
     - name: Include hardware-specific configuration roles
